syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityRole{

	rpc ReadSecurityRole (IdRequest17) returns (SecurityRolePayload);
	rpc CreateSecurityRole (SecurityRolePayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityRole (SecurityRolePayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityRole (SecurityRolePayload) returns (google.protobuf.Empty);
}

message IdRequest17 {
	string Id = 1;
}

message SecurityRolePayload{
                               
         string Id=1;
         string Role=2;
         bool IsInactive=3;

}